[package]
name = "mess"
version = "0.1.0"
authors = ["mrzzzrm <mrzesn@t-online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "benchmark"
harness = false
path = "src/benchmark.rs"

[dependencies]
num-traits = "0.2"
bencher = "0.1.5"